--- a/selfweb.html
+++ b/selfweb.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <link rel="stylesheet" href="selfweb.css">
+<script src="selfweb.jsx"></script>
 <script src="selfweb.js"></script>
 <body>
 
